--- a/main/views/user_profile.ejs
+++ b/main/views/user_profile.ejs
@@ -1,7 +1,5 @@
         <link rel="stylesheet" href="/css/user_profile.css">
-        <h1>
-            Codeial / Profile Page
-        </h1>
+        <img src=" <%=user.avatar %>" alt="<%= user.name %>" width="200">
         <% if(user.id == profile_user.id){ %>
             <!-- if user matches then show the form -->
             <form action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="POST">
