--- a/main/views/_comment.ejs
+++ b/main/views/_comment.ejs
@@ -1,15 +1,30 @@
+<!-- <li>
+    <p>
+        
+        <small>
+            <a class="delete-comment-button" href="/comments/destroy/<%=comment._id %>">X</a>
+        </small>
+        
+        <%= comment.content%>
+        <br>
+        <small>
+            <%=comment.user.name%>
+        </small>
+    </p>    
+
+</li> -->
 <li>
-        <p>
-            <% if (locals.user && locals.user.id == comment.user.id){ %>
-            <small>
-                <a href="/comments/destroy/<%= comment.id %>">X</a>
-            </small>
-            <% } %>
-            <%= comment.content %>
-            <br>
-            <small>
-                <%= comment.user.name %>
-            </small>
-        </p>    
+    <p>
+        <% if (locals.user && locals.user.id == comment.user.id){ %>
+        <small>
+            <a href="/comments/destroy/<%= comment.id %>">X</a>
+        </small>
+        <% } %>
+        <%= comment.content %>
+        <br>
+        <small>
+            <%= comment.user.name %>
+        </small>
+    </p>    
 
 </li>
